--- a/server/config.json
+++ b/server/config.json
@@ -3,7 +3,8 @@
     "SCRIPT_DIR": "C:\\productioncodes\\22_WatchlistStreamer",
     "Risk": 121,
     "host": "127.0.0.1",
-    "port": 7497,
+    "port2": 7497,
+    "port": 4002,
     "clientId": 3,
     "API_KEY": "PK5FAP22RYUFJZSMWTT6",
     "API_SECRET": "xRJzCaAXUfZib26nYHfCoo4UEssfRt2GHpipKKS0",
