--- a/server/config.json
+++ b/server/config.json
@@ -1,6 +1,7 @@
 {
     "TARGET_SCRIPT": "main.py",
     "SCRIPT_DIR": "C:\\productioncodes\\22_WatchlistStreamer",
+    "input_tickers": "C:\\productioncodes\\22_WatchlistStreamer\\tickers",
     "Risk": 121,
     "host": "127.0.0.1",
     "port2": 7497,
