--- a/server/config.json
+++ b/server/config.json
@@ -4,12 +4,12 @@
     "input_tickers": "C:\\productioncodes\\22_WatchlistStreamer\\tickers",
     "Risk": 121,
     "host": "127.0.0.1",
-    "port2": 7497,
-    "port": 4002,
+    "port": 7497,
+    "port2": 4002,
     "clientId": 3,
     "API_KEY": "PK5FAP22RYUFJZSMWTT6",
     "API_SECRET": "xRJzCaAXUfZib26nYHfCoo4UEssfRt2GHpipKKS0",
-    "BASE_URL": "https://paper-api.alpaca.markets/v2"
+    "BASE_URL": "https://paper-api.alpaca.markets/v2",
+    "max_entry_freq_minutes": 10
     
-
 }
