--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 # Database ini
 database.ini
 
+# Config
+config.json
+
+
 # testing
 /coverage
 
@@ -43,3 +47,9 @@ next-env.d.ts
 __pycache__/
 *.py[cod]
 *$py.class
+
+
+
+# scanner logs
+
+server/logs/
